# screenshot_rs

./: Cargo.toml  README.md  build.rs  screenshot2-manifest.rc  screenshot_rs-manifest.rc
src/: constants.rs  lib.rs  main.rs  systray.rs  utils.rs
src/geometry/: mod.rs
src/rendering/: mod.rs  selection.rs  shapes.rs  toolbar.rs
src/shapes/: mod.rs
src/types/: app_state.rs  drawing.rs  mod.rs  ui.rs
src/utils/: cursor.rs
