[package]
name = "screenshot_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.1"
fltk = { version = "^1.4", features = ["fltk-bundled", "use-ninja"] }
win-screenshot = "4.0.10"
winapi = { version = "0.3.9", features = ["minwindef", "windef", "winuser", "wingdi"] }
inputbot = "0.6"
lazy_static = "1.4.0"


[target.'cfg(target_os = "windows")'.dependencies]
native-windows-gui = { version = "1.0.10", default-features = false, features = ["tray-notification", "message-window", "menu", "cursor"] }

[build-dependencies]
embed-resource = "1.8"
